<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>


    <item android:id="@+id/animation_type_normal"
          android:title="@string/animation_type_normal"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/animation_type_increase_width"
          android:title="@string/animation_type_increase_width"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/animation_type_round_corner"
          android:title="@string/animation_type_round_corners"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/animation_type_butt_corner"
          android:title="@string/animation_type_butt_corners"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/animation_type_square_corner"
          android:title="@string/animation_type_square_corners"
          android:orderInCategory="100"
          app:showAsAction="never"/>



</menu>
